[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-nacos-config"
version = "0.0.1"
authors = [
    { name="kangkang223", email="chenwk.top@foxmail.com" },
]
description = "python读取nacos配置中心的配置文件"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.packages]
myproject = { include = "py_nacos_config" }

[project.urls]
Homepage = "https://github.com/Good0007/py-nacos-config.git"
Issues = "https://github.com/Good0007/py-nacos-config/issues"